added addAll
